--- a/ES2016문법/ap03.JS/ap03-02.dom-tree.html
+++ b/ES2016문법/ap03.JS/ap03-02.dom-tree.html
@@ -1,14 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>My titel</title>
+    <title>Document - ap03-02.domtree</title>
 </head>
 <body>
-    <a href="">
-        My Link
-    </a>
-    <h1>
-        My Header
-    </h1>
+    <a href="http://">My Link</a>
+    <h1>My header</h1>
 </body>
 </html>
