--- a/ES2016문법/ap03.JS/ap03-07.배열.html
+++ b/ES2016문법/ap03.JS/ap03-07.배열.html
@@ -205,4 +205,65 @@
     </body>
 </html>
 
-
+<script>
+    // 1 배열 생성
+    let arr = [true, 100, 'two'];
+
+    // 2 배열 요소 출력
+    console.log(arr);
+
+    // 3 배열 요소 추가
+    arr[arr.length] = 3;
+    arr[arr.length] = undefined;
+    console.log(arr);
+
+    // 4 배열 요소 수정
+    arr[0] = "update";
+    arr[arr.length - 1] = "update";
+    console.log(arr);
+
+    // 5 배열 요소 삭제 - 'two' 삭제
+    arr.splice(2, 1);
+    console.log(arr);
+
+    // 6 serach 배열 검색 filter
+    var arr2 = [1,3, 3784, 98, 842, 8230];
+    var search1 = arr2.filter(a => a >= 100);
+    var search2 = [];
+    for (i = 0 ; i < arr2.length ; i++) {
+        if (arr2[i] >= 100)
+            search2[search2.length] = arr2[i];
+    }
+    console.log(search1);
+    console.log(search2);
+
+    // 7 sort 정렬
+    const arrSort = arr.sort((a,b) => {
+        return a - b;
+    })
+    console.log(arr.sort());
+    console.log(arr2.sort());
+    console.log(arrSort);
+
+    // 8
+    arr = [1,3, 3784, 98, 842, 8230];
+    const arrMap = arr.map((val, i, array) => {
+        return val * 10;
+    })
+    console.log("arrMap", arrMap);
+
+    // 9
+    arr = [1,3, 3784, 98, 842, 8230];
+    const sum = arr.reduce((pval, cval, i, array) => {
+        return pval + cval;
+    });
+    console.log("sum ", sum);
+
+    // 10 배열에서 값을 찾으시오
+    arr = [1,3, 3784, 98, 842, 8230];
+    const index = arr.find ( (value, i, array) => {
+        return value == 98;
+    });
+    console.log(index);
+</script>
+
