--- a/Vuejs/vue02Babel/vue02-01.Bable이해하기.html
+++ b/Vuejs/vue02Babel/vue02-01.Bable이해하기.html
@@ -40,7 +40,26 @@
 </html>
 
 <!-- ES5 사용하기 -->
-
+<script src="text/javascript">
+    var name = "abc";
+    var age = 10;
+    var getMessage = () => {
+        return "Hello, ES5";
+    };
+    document.getElementById("output_ex5").innerText = "Hello, ES5";
+</script>
 
 
 <!-- ES2016 사용하기 -->
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.js">
+    /* 자바스크립트로 컴파일러. ES6-->ES5, JSX-->ES5 */
+</script>
+<script type="text/babel">
+    const name = "abe"; // 읽기 전용
+    let age = 10; // 읽기, 쓰기
+
+    const getMessage = () => {
+        return "Hello, ES2016";
+    };
+</script>
