--- a/Vuejs/vue08Vue동작원리/vue08-01.defineProperty.html
+++ b/Vuejs/vue08Vue동작원리/vue08-01.defineProperty.html
@@ -73,6 +73,90 @@
 
 <!-- vue 플러그인 임포트   -->
 
+<!-- vue 플러그인 임포트   -->
+<script src="https://unpkg.com/vue@2.6.14/dist/vue.js">/* vue 플러그인 임포트 */</script>
+<script src="https://unpkg.com/vuex@3.3.0/dist/vuex.js"> /* vuex 플러그인 임포트 */</script>
+<script src="https://unpkg.com/vue-router@3.1.6/dist/vue-router.js"> /* vue 라우터 플러그인 임포트 */</script>
+<script src="https://unpkg.com/axios/dist/axios.min.js"> /* axios 플러그인 임포트 */</script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"> /* jQuery 플러그인 임포트 */</script>
+<script>
+    new Vue({
+        /* edtmc^2w */
+        el: "#app1",
+        data: {
+            /* 인스턴스 안에서 사용되는 변수 등록, 공유 변수 */
+            msg: "hello"
+        },
+        //template: ``,
+        methods: {
+            /* 이벤트 핸들러 등록 + 일반 함수 */
+            app2BtnClick() {
+                alert("app2 btn clicked");
+                this.$data.msg = "msg changed";
+            }
+        },
+        components: {
+            /* 전역 컴포넌트는 등록하지 않는다. */
+            /* 지역 컴포넌트나 파일 컴포넌트이면 등록해야 한다 . 예시) "태그명" : 컴포넌트명 */
+
+        },
+        computed: {
+            /* 자동처리 + 동기식. 메서드로 작성. return 필수. */
+
+        },
+        watch: {
+            /* 자동처리 + 비동기식. data 에 등록된 프로퍼티(변수) 모니터링. 메서드로 작성. 매개변수 필수. 외부 api 호출을 위해서 사용 */
+
+        },
+        mounted: function() {
+            console.log("mounted");
+        },
+        updated: function() {
+            console.log("updated");
+        },
+    });
+
+    /*
+    javascript에서 vueModel 객체를 구현
+        뷰 인스턴스의
+            data: {
+                msg: "Hello",
+            }
+        의 기능을 직접 구현하여 본다
+
+        #app2 에 Object.defineProperty() 메서드의 get, set 설정하고 "123" 을 출력한다.
+        1. document.getElementById() 를 사용하여 #app2 엘리먼트를 찾는다.
+        2. 엘리먼트의 innerHTML 또는 innerText 프러퍼티에 설정
+    */
+   const data = {
+       // msg: "Hello"
+    };
+
+    Object.defineProperty(
+        data,
+        "msg",
+        {
+            get() {
+                // 화면에서 값을 가져온다
+                return document.getElementById('app2').innerHTML;
+            },
+            set(value) {
+                // 화면을 바꾼다
+                document.getElementById('app2').innerHTML = value;
+            }
+    });
+
+    debugger;
+
+    console.log(data.msg);
+
+    // 데이터에 값을 넣으면 화면이 바뀐다
+    data.msg = "123"; // call setter
+
+    function app2BtnClick() {
+        data.msg = "btn clicked";
+    }
+</script>
 
 
 
