--- a/Vuejs/vue13인스턴스속성/vue13-05.인스턴스data속성변경set.html
+++ b/Vuejs/vue13인스턴스속성/vue13-05.인스턴스data속성변경set.html
@@ -99,7 +99,8 @@
     </xmp>
     <hr>
     <div id="app">
-        <span v-for="(val, i) in arr" v-bind:key="i"> {{val}} </span>
+        <!-- arr: array > arr만 등록 -->
+        val: <span v-for="(val, i) in arr" v-bind:key="i"> {{val}} </span>
         <br>
         <button v-on:click="change1">방법1로 변경</button>
         <button v-on:click="change2">방법2로 변경</button>
@@ -111,6 +112,75 @@
 </html>
 
 <!-- vue 플러그인 임포트   -->
+
+<!-- vue 플러그인 임포트   -->
+<script src="https://unpkg.com/vue@2.6.14/dist/vue.js">/* vue 플러그인 임포트 */</script>
+<script src="https://unpkg.com/vuex@3.3.0/dist/vuex.js"> /* vuex 플러그인 임포트 */</script>
+<script src="https://unpkg.com/vue-router@3.1.6/dist/vue-router.js"> /* vue 라우터 플러그인 임포트 */</script>
+<script src="https://unpkg.com/axios/dist/axios.min.js"> /* axios 플러그인 임포트 */</script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"> /* jQuery 플러그인 임포트 */</script>
+<script>
+    new Vue({
+        /* edtmc^2w */
+        el: "#app",
+        data: {
+            /* 인스턴스 안에서 사용되는 변수 등록, 공유 변수 */
+            /*
+            (0) [1, 2, 3, 4, 5]
+            (1) [100, 2, 3, 4, 5]       <== 방법1을 적용
+            (2) [100, 300, 3, 4, 5]     <== 방법2을 적용
+            (3) [3, 4, 5]               <== 방법3을 적용
+            (4) [500, 3, 4, 5, 70]      <== 방법4을 적용
+            */
+           arr: [1, 2, 3, 4, 5]
+        },
+        //template: ``,
+        methods: {
+            /* 이벤트 핸들러 등록 + 일반 함수 */
+            change1(event) {
+                console.log(event.target); // event.target: <button>방법1로 변경</button>
+                this.$data.arr[0] = 100; // 배열 값만 바꾸면 화면이 바뀌지 않음
+                console.log(this.$data.arr);
+                this.$set(this.$data.arr, 0, 100); // (prop, idx, val)
+            }, change2() {
+                //this.$set(this.$data.arr, 1, 300);
+                // this.$set(this.$data.arr, "1", 300);
+                Vue.set(this.$data.arr, "1", 300);
+            }, change3() {
+                console.log(window.event);
+                // 3, 4, 5
+                this.$data.arr.splice(0, 2); // 복제 후 재할당
+            }, change4() {
+                // [500, 3, 4, 5, 70]
+                // spread
+                // this.$data.arr 배열을 복제해서 새로운 배열 만드
+                const newarr = [...this.$data.arr, 70];
+                console.log(newarr);
+                this.$set(this.$data.arr, newarr);
+            }
+        },
+        components: {
+            /* 전역 컴포넌트는 등록하지 않는다. */
+            /* 지역 컴포넌트나 파일 컴포넌트이면 등록해야 한다 . 예시) "태그명" : 컴포넌트명 */
+
+        },
+        computed: {
+            /* 자동처리 + 동기식. 메서드로 작성. return 필수. */
+
+        },
+        watch: {
+            /* 자동처리 + 비동기식. data 에 등록된 프로퍼티(변수) 모니터링. 메서드로 작성. 매개변수 필수. 외부 api 호출을 위해서 사용 */
+
+        },
+        mounted: function() {
+            console.log("mounted");
+        },
+        updated: function() {
+            console.log("updated");
+        },
+    });
+
+</script>
 
 
 
