--- a/Vuejs/vue13인스턴스속성/vue13-10.인스턴스속성do0508.html
+++ b/Vuejs/vue13인스턴스속성/vue13-10.인스턴스속성do0508.html
@@ -64,5 +64,64 @@
 
 <!-- vue 플러그인 임포트   -->
 
+<!-- vue 플러그인 임포트   -->
+<script src="https://unpkg.com/vue@2.6.14/dist/vue.js">/* vue 플러그인 임포트 */</script>
+<script src="https://unpkg.com/vuex@3.3.0/dist/vuex.js"> /* vuex 플러그인 임포트 */</script>
+<script src="https://unpkg.com/vue-router@3.1.6/dist/vue-router.js"> /* vue 라우터 플러그인 임포트 */</script>
+<script src="https://unpkg.com/axios/dist/axios.min.js"> /* axios 플러그인 임포트 */</script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"> /* jQuery 플러그인 임포트 */</script>
+<script>
+    new Vue({
+        /* edtmc^2w */
+        el: "#app",
+        data: {
+            /* 인스턴스 안에서 사용되는 변수 등록, 공유 변수 */
+            methodscopy: null,
+            watchcopy: null,
+            // computedcopy: null,
+            message: null
+        },
+        //template: ``,
+        methods: {
+            /* 이벤트 핸들러 등록 + 일반 함수 */
+            reverseMsg() {
+                console.log(this.$data.message);
+                // this.$data.methodscopy = this.$data.message;
+                const reversed = this.$data.message.split('', this.$data.message.length).reverse().join('');
+                this.$set(this.$data, "methodscopy", reversed);
+                // this.$set(this.$data, "methodscopy", this.$data.message);
+            }
+        },
+        components: {
+            /* 전역 컴포넌트는 등록하지 않는다. */
+            /* 지역 컴포넌트나 파일 컴포넌트이면 등록해야 한다 . 예시) "태그명" : 컴포넌트명 */
+
+        },
+        computed: {
+            /* 자동처리 + 동기식. 메서드로 작성. return 필수. */
+            computedcopy() {
+                const result = this.$data.message.split().reverse().join('');
+                return this.$data.message ? this.$data.message.split().reverse().join('') : null;
+            }
+        },
+        watch: {
+            /* 자동처리 + 비동기식. data 에 등록된 프로퍼티(변수) 모니터링. 메서드로 작성. 매개변수 필수. 외부 api 호출을 위해서 사용 */
+            message(value) {
+                // this.$data.watchcopy = value;
+                value = value.split('', this.$data.message.length).reverse().join('');
+
+                this.$set(this.$data, "watchcopy", value);
+            }
+        },
+        mounted: function() {
+            console.log("mounted");
+        },
+        updated: function() {
+            console.log("updated");
+        },
+    });
+
+</script>
+
 
 
