--- a/Vuejs/vue23반복지시자/vue23-ex01.CSS드랍메뉴1.html
+++ b/Vuejs/vue23반복지시자/vue23-ex01.CSS드랍메뉴1.html
@@ -290,3 +290,38 @@
 </html>
 
 <!-- vue 플러그인 임포트   -->
+
+<!-- vue 플러그인 임포트   -->
+<script src="https://unpkg.com/vue@2.6.14/dist/vue.js">/* vue 플러그인 임포트 */</script>
+<script src="https://unpkg.com/vuex@3.3.0/dist/vuex.js"> /* vuex 플러그인 임포트 */</script>
+<script src="https://unpkg.com/vue-router@3.1.6/dist/vue-router.js"> /* vue 라우터 플러그인 임포트 */</script>
+<script src="https://unpkg.com/axios/dist/axios.min.js"> /* axios 플러그인 임포트 */</script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"> /* jQuery 플러그인 임포트 */</script>
+<script>
+    new Vue({
+        /* edtmc^2w */
+        el: "#app1",
+        data: {
+            /* 인스턴스 안에서 사용되는 변수 등록, 공유 변수 */
+            mainitems: [
+                {text: 'main1',
+                subitems: [
+                    {text: 'sub 1-1'},
+                    {text: 'sub 1-2'}
+                ]},
+                {text: 'main2',
+                subitems: [
+                    {text: 'sub 2-1'},
+                    {text: 'sub 2-2'},
+                    {text: 'sub 2-3'}
+                ]}
+            ]
+        },
+        //template: ``,
+        methods: {
+            /* 이벤트 핸들러 등록 + 일반 함수 */
+
+        },
+    });
+
+</script>
