--- a/ES2016문법/ap05.ES2016문법/ap05-03.template_literal.html
+++ b/ES2016문법/ap05.ES2016문법/ap05-03.template_literal.html
@@ -18,3 +18,16 @@
 
 </body>
 </html>
+<script>
+    const string1 = '안녕하세요';
+    const string2 = '2안녕하세요';
+    const greeting = `${string1} <br>${string2}`;
+    console.log(greeting);
+
+    const produc = {
+        name: 'name',
+        price: '1111'
+    }
+    const mesg = ` ${produc.name} : ${produc.price}원 `;
+    console.log(mesg);
+</script>
