--- a/Vuejs/vue28지시자실습/vue28-ex-01.표준이벤트등록.html
+++ b/Vuejs/vue28지시자실습/vue28-ex-01.표준이벤트등록.html
@@ -99,20 +99,20 @@
             span에 mouseup 이벤트 핸들러를 작성하시오.   ==> spanmouseup.   background-color를 pink로 설정
             span에 mouseout 이벤트 핸들러를 작성하시오.  ==> spanmouseout.  background-color를 red로 설정
         </xmp>
-        <span mouseover= "spanmouseover"
-              mousedown= "spanmousedown"
-              mouseup  = "spanmouseup"
-              mouseout = "spanmouseout" >
+        <span   v-on:mouseover= "spanmouseover"
+                    v-on:mousedown= "spanmousedown"
+                    v-on:mouseup  = "spanmouseup"
+                    v-on:mouseout = "spanmouseout" >
         </span>
-        <span mouseover= "spanmouseover"
-              mousedown= "spanmousedown"
-              mouseup  = "spanmouseup"
-              mouseout = "spanmouseout" >
+        <span v-on:mouseover= "spanmouseover"
+        v-on:mousedown= "spanmousedown"
+        v-on:mouseup  = "spanmouseup"
+        v-on:mouseout = "spanmouseout" >
         </span>
-        <span mouseover= "spanmouseover"
-              mousedown= "spanmousedown"
-              mouseup  = "spanmouseup"
-              mouseout = "spanmouseout">
+        <span v-on:mouseover= "spanmouseover"
+        v-on:mousedown= "spanmousedown"
+        v-on:mouseup  = "spanmouseup"
+        v-on:mouseout = "spanmouseout">
         </span>
         <hr />
 
@@ -124,13 +124,20 @@
             "vue23-01.v-for와배열.html" 를 참조하여 option 부분을 v-for 를 사용하도록 수정하시오.
 
         </xmp>
-        <select id="sel" change="selectchange">
+        <select id="sel" v-on:change="selectchange">
+            <!--
             <option value="../images/strawberry.gif">딸기</option>
             <option value="../images/banana.gif">바나나</option>
             <option value="../images/apple.gif" selected>사과</option>
+            -->
+            <option  v-for="(option, index) in options"
+                        v-bind:key="index"
+                        v-bind:index="option.value">
+                {{option.value}}
+            </option>
         </select>
 
-        <img id="img" src="img_select" />
+        <img id="img" v-bind:src="img_select" />
         <hr />
 
         <xmp>
@@ -139,7 +146,7 @@
             focus 이벤트 핸들러 ==> inputfocus. outline: 2px dotted red 설정
             blur 이벤트 핸들러 ==> inputblur. outline: none 설정
         </xmp>
-        <input type="text" id="ID" blur="inputblur" focus="inputfocus" />
+        <input type="text" id="ID" v-on:blur="inputblur" v-on:focus="inputfocus" />
         <hr />
 
     </div>
@@ -166,7 +173,13 @@
             /* 인스턴스 안에서 사용되는 변수 등록, 공유 변수 */
             img_image3: null,
             img_but1: '../images/but1.gif',
-            img_swap: '../images/img_swap_off.png'
+            img_swap: '../images/img_swap_off.png',
+            img_select: '../images/apple.gif',
+            options: [
+                {text: '딸기', value: '../images/strawberry.gif'},
+                {text: '바나나', value: '../images/banana.gif'},
+                {text: '사과', value: '../images/apple.gif'}
+            ]
         },
         //template: ``,
         methods: {
@@ -194,7 +207,40 @@
                     this.$set(this.$data, 'img_but1', '../images/img_swap_off.png');
                 }
                 console.log(event.target.src);
-
+            },
+            spanmouseover() {
+                // span에 mouseover 이벤트 핸들러 작성
+                // <span stype="background:yellow"></span>
+                // event.target.style = "background-color:yellow";
+                event.target.style.backgroundColor = "yellow";
+            },
+            spanmousedown() {
+                // span에 mouseover 이벤트 핸들러 작성
+                // <span stype="background:yellow"></span>
+                // event.target.style = "background-color:blue";
+                event.target.style.backgroundColor = "blue";
+            },
+            spanmouseup() {
+                // span에 mouseover 이벤트 핸들러 작성
+                // <span stype="background:yellow"></span>
+                // event.target.style = "background-color:pink";
+                event.target.style.backgroundColor = "pink";
+            },
+            spanmouseout() {
+                // span에 mouseover 이벤트 핸들러 작성
+                // <span stype="background:yellow"></span>
+                // event.target.style = "background-color:red";
+                event.target.style.backgroundColor = "orange";
+            },
+            selectchange() {
+                // alert(event.target.value);
+                this.$set(this.$data, 'img_select', event.target.value);
+            },
+            inputblur() {
+                // blur 이벤트 핸들러 ==> inputblur, outline:none 설정
+                console.log(event.target);
+                // event.target -- <input style='outline: none;'/>
+                event.target.style.outline = 'none';
             }
         },
         components: {
