--- a/Vuejs/vue29데이터바인딩실습1.ToDo/vue29-01.ToDo.qs05-12.html
+++ b/Vuejs/vue29데이터바인딩실습1.ToDo/vue29-01.ToDo.qs05-12.html
@@ -296,7 +296,7 @@
 
     </div>
 
-    
+
 
 </body>
 
@@ -304,5 +304,98 @@
 
 <!-- vue 플러그인 임포트   -->
 
+<!-- vue 플러그인 임포트   -->
+<script src="https://unpkg.com/vue@2.6.14/dist/vue.js">/* vue 플러그인 임포트 */</script>
+<script src="https://unpkg.com/vuex@3.3.0/dist/vuex.js"> /* vuex 플러그인 임포트 */</script>
+<script src="https://unpkg.com/vue-router@3.1.6/dist/vue-router.js"> /* vue 라우터 플러그인 임포트 */</script>
+<script src="https://unpkg.com/axios/dist/axios.min.js"> /* axios 플러그인 임포트 */</script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"> /* jQuery 플러그인 임포트 */</script>
+<script>
+    new Vue({
+        /* edtmc^2w */
+        el: "#app",
+        data: {
+            /* 인스턴스 안에서 사용되는 변수 등록, 공유 변수 */
+            newTodoItem: null,
+            showModal: false,
+            todoItems: [
+                { id: 1, todo: "영화보기", done: false },
+                { id: 2, todo: "주말 산책", done: true },
+                { id: 3, todo: "ES6 학습", done: false },
+                { id: 4, todo: "잠실 야구장", done: false }
+            ],
+        },
+        //template: ``,
+        methods: {
+            /* 이벤트 핸들러 등록 + 일반 함수 */
+            clearAll() {
+                this.$set(this.$data, 'todoItems', []);
+            },
+            removeTodo(id, index) {
+                // id 값을 이용해서 배열의 idx를 찾으시오
+                const findIndex = this.$data.todoItems.findIndex((item,index, array) => {
+                    return item.id == id;
+                });
+                this.$data.todoItems.splice(findIndex, 1);
+
+                // 이벤트 취소 버블링방지
+                event.stopPropagation();
+                event.preventDefault();
+            },
+            checked(done) {
+                if (done) {
+                    return "checked";
+                } else {
+                    return null;
+                }
+            },
+            doneToggle(id, idx) {
+                // id 이용해서 배열의 인덱스 찾기
+                //  done값을 반전시킴 this.$data.todoItems[findIndex].done = this.$data.todoItems[findIndex].done;
+                const findIndex = this.$data.todoItems.findIndex(item => id === item.id);
+                this.$data.todoItems[findIndex].done = !this.$data.todoItems[findIndex].done;
+            },
+            addTodo() {
+                const todo = {
+                    id: 0,
+                    todo: this.$data.newTodoItem,
+                    done: false
+                };
+                // this.$data.todoItems[this.$data.todoItems.length] = todo;
+                this.$set(this.$data.todoItems, this.$data.todoItems.length + "", todo);
+
+               /*  let maxid = 0;
+                if(this.$data.todoItems.length > 0) {
+                    maxid = this.$data.todoItems.map(item => item.id)
+                    .reduce((itemprev, itemcur) => itemprev ));
+                } else {
+                    maxid = 0;
+                } */
+
+                this.$data.newTodoItem = '';
+            }
+        },
+        components: {
+            /* 전역 컴포넌트는 등록하지 않는다. */
+            /* 지역 컴포넌트나 파일 컴포넌트이면 등록해야 한다 . 예시) "태그명" : 컴포넌트명 */
+
+        },
+        computed: {
+            /* 자동처리 + 동기식. 메서드로 작성. return 필수. */
+
+        },
+        watch: {
+            /* 자동처리 + 비동기식. data 에 등록된 프로퍼티(변수) 모니터링. 메서드로 작성. 매개변수 필수. 외부 api 호출을 위해서 사용 */
+
+        },
+        mounted: function() {
+            console.log("mounted");
+        },
+        updated: function() {
+            console.log("updated");
+        },
+    });
+
+</script>
 
 
