--- a/Vuejs/vue31컴포넌트/vue31-ex-01.컴포넌트실습.html
+++ b/Vuejs/vue31컴포넌트/vue31-ex-01.컴포넌트실습.html
@@ -78,35 +78,141 @@
 
     <div id="app">
         <!-- component-header -->
+        <!--
         <header>
             Header
         </header>
+         -->
+         <component-header></component-header>
 
         <!-- component-content -->
+        <component-content>
+
+        </component-content>
+
+        <!--
         <div id="content">
             <p>Content</p>
-
+            -->
             <!-- component-aside -->
-            <aside>
+            <!-- <aside>
                 Aside
             </aside>
-
+ -->
             <!-- component-content-list -->
-            <div id="content-list">
+<!--             <div id="content-list">
                 List
             </div>
         </div>
-
+ -->
         <!-- component-footer -->
-        <footer>
+<!--         <footer>
             Footer
-        </footer>
+        </footer> -->
+        <component-footer></component-footer>
+
     </div>
 
-    
+
 
 </body>
 
 </html>
 
 <!-- vue 플러그인 임포트   -->
+
+<!-- vue 플러그인 임포트   -->
+<script src="https://unpkg.com/vue@2.6.14/dist/vue.js">/* vue 플러그인 임포트 */</script>
+<script src="https://unpkg.com/vuex@3.3.0/dist/vuex.js"> /* vuex 플러그인 임포트 */</script>
+<script src="https://unpkg.com/vue-router@3.1.6/dist/vue-router.js"> /* vue 라우터 플러그인 임포트 */</script>
+<script src="https://unpkg.com/axios/dist/axios.min.js"> /* axios 플러그인 임포트 */</script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"> /* jQuery 플러그인 임포트 */</script>
+<script>
+    /*  부모인 componentContent보다 앞에 만들어야함
+        componetContent안에 component 등록*/
+    var componentAside = {
+        props: ['aside'],
+        template: `
+        <aside>
+                Aside
+        </aside>
+        `
+    }
+    var componentContentList = {
+        props: ['list'],
+        template: `
+        <div id="content-list" >
+                List2222
+            </div>
+        `
+    }
+    var componentHeader = {
+        props: ['header'],
+        template: `
+        <header>
+            Header
+        </header>
+        `
+    }
+
+    var componentContent = {
+        props: ['content'],
+        template: `
+            <div id="content">
+                <p>Content</p>
+                <component-aside></component-aside>
+                <component-content-list></component-content-list>
+            </div>
+        `,
+        components: {
+            /* local componet setting */
+            'component-aside': componentAside,
+            'component-content-list': componentContentList,
+        }
+    }
+
+    var componentFooter = {
+        props: ['footer'],
+        template: `
+        <footer>
+            Footer
+        </footer>
+        `
+    }
+
+    new Vue({
+        /* edtmc^2w */
+        el: "#app",
+        data: {
+            /* 인스턴스 안에서 사용되는 변수 등록, 공유 변수 */
+
+        },
+        //template: ``,
+        methods: {
+            /* 이벤트 핸들러 등록 + 일반 함수 */
+
+        },
+        components: {
+            /* 전역 컴포넌트는 등록하지 않는다. */
+            /* 지역 컴포넌트나 파일 컴포넌트이면 등록해야 한다 . 예시) "태그명" : 컴포넌트명 */
+            'component-header': componentHeader,
+            'component-content': componentContent,
+            'component-footer': componentFooter
+        },
+        computed: {
+            /* 자동처리 + 동기식. 메서드로 작성. return 필수. */
+
+        },
+        watch: {
+            /* 자동처리 + 비동기식. data 에 등록된 프로퍼티(변수) 모니터링. 메서드로 작성. 매개변수 필수. 외부 api 호출을 위해서 사용 */
+
+        },
+        mounted: function() {
+            console.log("mounted");
+        },
+        updated: function() {
+            console.log("updated");
+        },
+    });
+
+</script>
