--- a/Vuejs/vue36상태관리-Veux/vue36-ex-01.vuex-counter.html
+++ b/Vuejs/vue36상태관리-Veux/vue36-ex-01.vuex-counter.html
@@ -160,6 +160,7 @@
             addCounter(param){
                 debugger;
                 this.$data.counter = this.$data.counter + param;
+                store.dipatch('addCounter', param)';
             },
             subCounter(param){
                 debugger;
