--- a/Vuejs/vue38컴포넌트-스타일/vue38컴포넌트-스타일.html
+++ b/Vuejs/vue38컴포넌트-스타일/vue38컴포넌트-스타일.html
@@ -119,6 +119,7 @@
             $ vue create styleprj01
             Vue CLI v4.5.13
             ? Please pick a preset:
+
             > Default ([Vue 2] babel, eslint)
               Default (Vue 3 Preview) ([Vue 3] babel, eslint)
               Manually select features
@@ -253,7 +254,7 @@
                 </div>
             </template>
 
-            <s cript>
+            <script>
             import Child1 from "./components/Child1.vue";
             import Child2 from "./components/Child2.vue";
 
@@ -269,7 +270,7 @@
                     child2: Child2,
                 }
             };
-            </s cript>
+            </script cript>
 
 
         ##################################
