--- a/Vuejs/vue61ToDo/vue61ToDo.html
+++ b/Vuejs/vue61ToDo/vue61ToDo.html
@@ -91,7 +91,7 @@
             $ ls
             1차/  2차/  3차/  snap0093.png  snap0096.png  snap0100.png  vue61ToDo.html
 
-            step 2-05. todoprj01 프로젝트 생성. package.json 생성.
+            step 2-05 프로젝트 생성. package.json 생성.
             $ vue create todoprj01
             Vue CLI v4.5.13
             ? Please pick a preset:
