--- a/React/rt17.훅컴포넌트이벤트/rt17-ex05.dynamic.html
+++ b/React/rt17.훅컴포넌트이벤트/rt17-ex05.dynamic.html
@@ -45,9 +45,78 @@
 </body>
 </html>
 
-<!-- react 플러그인 include   -->
-<!-- 주의: 사이트를 배포할 때는 "development.js"를 "production.min.js"로 대체하세요. -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.js">
+    /* 자바스크립트로 컴파일러. ES6-->ES5, JSX-->ES5 */
+</script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/react/16.12.0/umd/react.development.js">
+    /* import React, { Component, PureComponent } from 'react' */
+</script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/prop-types/15.7.2/prop-types.js">
+</script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/16.11.0/umd/react-dom.development.js">
+    /* import ReactDOM from 'react-dom' */
+</script>
+<script type="text/babel">
+    const { useState, useEffect, useRef, useCallback, useMemo, Fragment } = React;
+
+    function CounterContainer(props) {
+        // 컴포넌트의 상태값 설정
+        const [counter, setCounter] = useState(0); // 상태값이 기본타입인 경우
+
+        // callback 메서드 작성. callback 메서드는 부모의 공유 상태값을 변경하기 위해서 사용된다.
+        const callbackCounter = useCallback( (param)=>{
+            // state 변경
+            debugger;
+            setCounter( counter + param );
+        }, [/* 메서드와 연관되는 상태(변수)명들을 기술 */counter]);
+
+
+        // JSX로 화면 만들기
+        return (
+            <div id="app">
+                <CounterLabel counter={counter} callbackCounter={callbackCounter}></CounterLabel>
+            </div>
+        )
+    }
+
+    function CounterLabel(props) {
+        // 이벤트 핸들러 작성.
+        const handlerClick = (event)=>{
+            // 이벤트 핸들러는 화살표 함수로 만들면 this bind()를 생략해도 된다
+            console.log(event.target);
+
+
+                // this.$data.state === "ready"  이면 this.$data.state ="active"
+                // this.$data.state === "active" 이면 this.$data.state ="done"
+                // this.$data.state === "done"   이면 this.$data.state ="ready"
+
+                if( this.$data.state === 'ready'){
+                    // this.$data.state = 'active';
+                    this.$set( this.$data, 'state', 'active');
+                }
+                else if( this.$data.state === 'active'){
+                    // this.$data.state = 'done';
+                    this.$set( this.$data, 'state', 'done');
+                }
+                else if( this.$data.state === 'done'){
+                    // this.$data.state = 'ready';
+                    this.$set( this.$data, 'state', 'ready');
+                }
+
+        };
+
+        // JSX로 화면 만들기
+        return (
+                <div className={state} onClick={handler}>
+                    ready
+                </div>
+
+        )
+    }
+
+    ReactDOM.render( <CounterContainer></CounterContainer> , document.getElementById("app") );
+
+</script>
 
 
 
-
