--- a/React/rt19.훅컴포넌트실습3.CRUD/rt19.컴포넌트실습3.CRUD.html
+++ b/React/rt19.훅컴포넌트실습3.CRUD/rt19.컴포넌트실습3.CRUD.html
@@ -315,3 +315,265 @@
 </html>
 
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.js">
+    /* 자바스크립트로 컴파일러. ES6-->ES5, JSX-->ES5 */
+</script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/react/16.12.0/umd/react.development.js">
+    /* import React, { Component, PureComponent } from 'react' */
+</script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/prop-types/15.7.2/prop-types.js">
+</script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/16.11.0/umd/react-dom.development.js">
+    /* import ReactDOM from 'react-dom' */
+</script>
+<script type="text/babel">
+
+    const { useState, useEffect, useRef, useCallback, useMemo, Fragment } = React;
+
+    function CrudContainer(props) {
+        // 컴포넌트의 상태값 설정
+        const [items, setItems] = useState([
+            {id:1, name: "슈퍼맨", power: 100},
+            {id:2, name: "아쿠아맨", power: 300},
+            {id:3, name: "스파이더맨", power: 500},
+            {id:4, name: "배트맨", power: 30},
+        ]);
+
+        // callback 메서드 작성. callback 메서드는 부모의 공유 상태값을 변경하기 위해서 사용된다.
+        // callback 메서드 작성. callback 메서드는 부모의 공유 상태값을 변경하기 위해서 사용된다.
+        const callbackAdd = useCallback( (param)=>{
+            // state 변경
+            // items에서 최대 id 값을 구하는 방법.
+            // 방법1. todoItems.map()과 todoItems.reduce()를 사용하여 max id를 찾는 방법
+            let maxid = 0;
+            if( items.length>0){
+                maxid = items.map( item=>item.id )
+                             .reduce( (prev,curt)=> prev>= curt ? prev: curt );
+            }
+            else {
+                maxid = 0;
+            }
+            const newid = maxid + 1;
+
+            // param 에  id값 추가
+            param.id = newid ;
+
+            /// items.push(param);
+            setItems( [...items, param] );
+        }, [/* 메서드와 연관되는 상태(변수)명들을 기술 */ items ]);
+        const callbackDel = useCallback( (param)=>{
+            // state 변경
+            const newItems = items.filter((item) => {
+                return item.id !== param.id;
+            });
+            setItems(newItems);
+        }, [/* 메서드와 연관되는 상태(변수)명들을 기술 */ items ]);
+        const callbackUp = useCallback( (param)=>{
+            // state 변경
+            const newItems = items.filter((item) => {
+                if (item.id == param.id) {
+                    item.power += 100;
+                }
+
+                return item;
+            });
+            setItems(newItems);
+
+        }, [/* 메서드와 연관되는 상태(변수)명들을 기술 */ items ]);
+        const callbackDown = useCallback( (param)=>{
+            // state 변경
+            const newItems = items.filter((item) => {
+                if (item.id == param.id) {
+                    item.power -= 50;
+                }
+
+                return item;
+            });
+            setItems(newItems);
+
+        }, [/* 메서드와 연관되는 상태(변수)명들을 기술 */ items ]);
+
+
+        // 이벤트 핸들러 작성.
+        const handler = (event)=>{
+            // 이벤트 핸들러는 화살표 함수로 만들면 this bind()를 생략해도 된다
+            console.log(event.target);
+        };
+
+        // JSX로 화면 만들기
+        return (
+            <div>
+                <h1>Creat Read Update Delete</h1>
+                <CrudInput callbackAdd={callbackAdd}></CrudInput>
+                <hr/>
+                <CrudList
+                    items={items}
+                    callbackDel={callbackDel}
+                    callbackUp={callbackUp}
+                    callbackDown={callbackDown}
+                >
+                </CrudList>
+            </div>
+        )
+    }
+
+    function CrudInput(props) {
+
+        const inputName = useRef();
+        const inputPower = useRef();
+
+
+
+        // 이벤트 핸들러 작성.
+        const handlerAdd = (event) => {
+            // 이벤트 핸들러는 화살표 함수로 만들면 this bind()를 생략해도 된다
+            console.log(event.target);
+
+        // inputName.current.value 유효성 검사
+        // inputName.current.value;
+        // inputPower.current.value 유효성 검사
+
+        if (inputPower.current.value == '   ') {
+            alert('power에 값을 입력하세요.');
+            // return; 이벤트 취소
+            event.stopPropagation();
+            event.preventDefault();
+            inputPower.current.focus();
+            return;
+        }
+        if (isNaN(Number(inputPower.current.value))) {
+            alert('power에 숫자만 입력하세요.');
+            event.stopPropagation();
+            event.preventDefault();
+            inputPower.current.focus();
+            inputPower.current.value = 0;
+            return;
+        }
+
+            // 부모 메서드 호출
+            var man = {
+                name: inputName.current.value,
+                power: inputPower.current.value
+            }
+             props.callbackAdd(man);
+
+             inputName.current.value = Null;
+             inputPower.current.value = 0;
+        };
+
+        // JSX로 화면 만들기
+        return (
+            <div>
+                <div>
+                    <label htmlFor="">Name : 2 </label>
+                    <input type="text" name="name" placeholder="이름을 입력하세요"  ref={inputName}/>
+                </div>
+                <div>
+                    <label htmlFor="">Power : 2</label>
+                    <input type="number" name="power" placeholder="숫자를 입력하세요"  ref={inputPower}/>
+                </div>
+                <button onClick={handlerAdd}>Add</button>
+            </div>
+        )
+    }
+
+    function CrudList(props) {
+
+        const {callbackDel, callbackDown, callbackUp, callbackEdit} = props;
+
+        // JSX로 화면 만들기
+        const arrs = props.items.map( (item)=>{
+            return (
+                <CrudListItem item={item} key={item.id} callbackDel={callbackDel} callbackUp={callbackUp} callbackDown={callbackDown} callbackEdit={callbackEdit}></CrudListItem>
+            )
+        });
+
+        return (
+            <table>
+                <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>NAME</th>
+                        <th>POWER</th>
+                        <th>CRUD</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {arrs}
+                </tbody>
+            </table>
+        )
+    }
+
+
+    function CrudListItem(props) {
+        // 컴포넌트의 상태값 설정
+
+
+
+        // JSX로 화면 만들기
+        // props = {item, callbackDel, callbackUp, callbackDown, callbackSave }
+        const {item, callbackDel, callbackUp, callbackDown, callbackEdit} = props;
+        const strong = item.power >= 300 ? "strong" : null;
+        const inputName = useRef();
+        const inputPower = useRef();
+
+        // callback 메서드 작성. callback 메서드는 부모의 공유 상태값을 변경하기 위해서 사용된다.
+        const callback = useCallback( (param)=>{
+            // state 변경
+        }, [/* 메서드와 연관되는 상태(변수)명들을 기술 */]);
+
+        // 이벤트 핸들러 작성.
+        const handlerDel = (event)=>{
+            // 이벤트 핸들러는 화살표 함수로 만들면 this bind()를 생략해도 된다
+            console.log(event.target);
+            props.callbackDel(item);
+        };
+        const handlerUp = (event)=>{
+            // 이벤트 핸들러는 화살표 함수로 만들면 this bind()를 생략해도 된다
+            console.log(event.target);
+            props.callbackUp(item);
+        };
+        const handlerDown = (event)=>{
+            // 이벤트 핸들러는 화살표 함수로 만들면 this bind()를 생략해도 된다
+            console.log(event.target);
+            props.callbackDown(item);
+        };
+        const handlerEdit = (event)=>{
+            // 이벤트 핸들러는 화살표 함수로 만들면 this bind()를 생략해도 된다
+            console.log(event.target);
+            props.callbackEdit(item);
+        };
+
+        const formEdit = (
+            <tr className = {strong}>
+                <td>{item.id}</td>
+                <td>
+                    <input type="text" name="name" placeholder="이름을 입력하세요"  ref={inputName} value={item.name}/>
+                </td>
+                <td>
+                    <input type="number" name="power" placeholder="숫자를 입력하세요"  ref={inputPower} value={item.power}/>
+                </td>
+            </tr>
+        );
+
+
+        const formView= (
+            <tr className={strong} >
+                <td>{item.id}</td>
+                <td>{item.name}</td>
+                <td>{item.power}</td>
+                <td>
+                    <button onClick={handlerDel}>Del</button>
+                    <button onClick={handlerUp}>Power Up</button>
+                    <button onClick={handlerDown}>Power Down</button>
+                    <button onClick={handlerEdit}>Edit</button>
+                </td>
+            </tr>
+        )
+
+       return formEdit;
+    }
+
+    ReactDOM.render(<CrudContainer></CrudContainer>, document.getElementById("app"));
+</script>
